--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "admin-ui-example",
+  "name": "admin-interface",
   "vendor": "vtex",
   "version": "0.1.0",
-  "title": "Admin-ui example app",
+  "title": "Interface for the admin panel",
   "description": "",
   "mustUpdateAt": "2022-08-28",
   "scripts": {
