--- a/react/package.json
+++ b/react/package.json
@@ -6,16 +6,17 @@
     "@types/node": "^11.12.1",
     "@types/react": "^16.8.10",
     "@vtex/tsconfig": "^0.4.4",
-    "react": "^16.8.6",
     "graphql": "^14.6.0",
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "typescript": "3.9.7",
     "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime"
   },
   "dependencies": {
-    "@vtex/admin-ui": "^0.124.0",
+    "@vtex/admin-ui": "^0.131.2",
+    "admin-ui": "^3.3.13",
     "faker": "^5.5.3",
-    "react-intl": "^5.21.0",
-    "react-apollo": "^3.1.5"
+    "react-apollo": "^3.1.5",
+    "react-intl": "^5.21.0"
   }
 }
